Adding a service to run database

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,22 @@ jobs:
 
   ci:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:15
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: mydb
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+          
     steps:
     - uses: actions/checkout@v4
 
@@ -20,7 +36,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22'
-        
+
     - name: Inicia banco
       run: docker compose up -d postgres
 
