Ajustando variaveis de ambiente

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,9 +20,9 @@ jobs:
         ports:
           - 5432:5432
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: mydb
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: root
+          POSTGRES_DB: root
         options: >-
           --health-cmd="pg_isready -U postgres"
           --health-interval=10s
