Ajustes para implementar pipeline
* teste

* correcao lint

* Fixing error of docker volume

* Ajustando compose e go

* voltando estado anterior do compose

* Adding a service to run database

* Removed step inicia banco

* Adicionando o uso de action para rodar o lint no projeto

* Ajustando variaveis de ambiente

* Ajustando variaveis do banco

* Ajustando variaveis do banco

* Ajustando variaveis do banco

* Removendo variavel de ambiente do codigo

* Ajustando informacoes sensiveis no codigo

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,22 @@ jobs:
 
   ci:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:15
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+      
     steps:
     - uses: actions/checkout@v4
 
@@ -21,11 +37,11 @@ jobs:
       with:
         go-version: '1.22'
 
-    - name: Inicia banco
-      run: docker compose up -d postgres
-
     - name: Lint
-      run: docker run --rm -itv $(CURDIR):/app -w /app golangci/golangci-lint golangci-lint run controllers/ database/ models/ routes/
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: v1.59
+        args: controllers/ database/ models/ routes/
 
     - name: Test
-      run: go test -v main_test.go
+      run: DB_HOST=${{ secrets.DB_HOST }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} DB_USER=${{ secrets.DB_USER }} DB_NAME=${{ secrets.DB_NAME }} DB_PORT=${{ secrets.DB_PORT }} go test -v main_test.go
